# zero-env-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-23-zero-env-proxy-implementation.md
docs/superpowers/specs/: 2026-05-23-zero-env-proxy-design.md
examples/: allowed_agent.py  blocked_agent.py  tamper_demo.py  zero-env.yaml.example
scripts/: verify_wheel.py
tests/: test_cli.py  test_config.py  test_examples.py  test_gateway.py  test_identity.py  test_lockfile.py  test_providers.py
zero_env_proxy/: __init__.py  cli.py  config.py  gateway.py  identity.py  lockfile.py  providers.py
