[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-env-proxy"
version = "0.1.0"
description = "A small local credential proxy for automation scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "psutil>=5.9",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]

[project.scripts]
zero-env = "zero_env_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zero_env_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
